@startuml

entity "phong_may_tinh" as phong_may_tinh {
	* ma_phong
	+ ten_phong
	+ ten_nguoi_quan_ly_phong
}

entity "may_tinh" as may_tinh {
	* ma_may_tinh
	+ toc_do_cpu
	+ dung_luong_ram
	+ dung_luong_o_cung
}

entity "mon_hoc" as mon_hoc {
	* ma_mon_hoc
	+ ten_mon_hoc
	+ thoi_luong_mon_hoc
}

entity "dang_ky" as dang_ky {
	+ ngay_dang_ky
}

phong_may_tinh |o--|{ may_tinh

mon_hoc |o--|{ dang_ky

phong_may_tinh |o--|{ dang_ky

@enduml